--- a/Web/HTML/Test.html
+++ b/Web/HTML/Test.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>heading</h1>
+  <h2>headings</h2>
     <form class="container">
         <div class="form-group">
           <label for="exampleFormControlInput1">Email address</label>
