--- a/Web/HTML/Bootstrap input.html
+++ b/Web/HTML/Bootstrap input.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.css">
+    <script src="../JS/Script.js"></script>
 </head>
 <body>
   <h1>heading</h1>
