--- a/Web/HTML/Natour.html
+++ b/Web/HTML/Natour.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natours | Exciting tours for adventurous people</title>
     <link rel="stylesheet" href="../CSS/Natours.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="../Bootstrap/css/bootstrap.css"> -->
 </head>
 
 <body>
     <header class="header">
-        some text...
+        <div class="logo-box">
+            <img class="logo" src="https://img.icons8.com/bubbles/100/000000/home.png" alt="logo" />
+            <!-- <img class="logo" src="https://img.icons8.com/nolan/64/home.png"/> -->
+            <!-- <img class="logo" src="https://img.icons8.com/cute-clipart/64/000000/home.png"/> -->
+        </div>
+        <div class="text-box">
+            <h1 class="primary-heading">
+                <span class="heading-primary-main">Outdoors</span>
+                <span class="heading-primary-sub">is where life happens</span>
+            </h1>
+        </div>
+
     </header>
 </body>
 
