--- a/Web/HTML/Test.html
+++ b/Web/HTML/Test.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Grid</title>
-    <link rel="stylesheet" href="../CSS/test.css">
+    <link rel="stylesheet" href="../CSS/test.css.map">
     <!-- <script src="../JS/Script.js"></script> -->
 </head>
 
@@ -15,16 +15,26 @@
     </header>
     
 
-    <img src="https://images.unsplash.com/photo-1597666976641-27d60b160499?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
+    <!-- <img src="https://images.unsplash.com/photo-1597666976641-27d60b160499?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
     <img src="https://images.unsplash.com/photo-1597666953571-8b85a0159483?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
     <img src="https://images.unsplash.com/photo-1596633298131-decb4c537336?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
     <img src="https://images.unsplash.com/photo-1597056780590-a022f5d7aa7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
     <img src="https://images.unsplash.com/photo-1596942273255-16aa79a98a28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
     <img src="https://images.unsplash.com/photo-1596942325802-1fccd6d194f7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
     <img src="https://images.unsplash.com/photo-1597035348713-8d2c5b892073?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1596611091918-242cf6b794c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
+    <img src="https://images.unsplash.com/photo-1596611091918-242cf6b794c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19"> -->
 
-
+        <nav>
+            <ul class="navigation">
+                <li><a href="#"></a>About us</li>
+                <li><a href="#"></a>Pricing</li>
+                <li><a href="#"></a>Contact</li>
+            </ul>
+            <div class="button">
+                <a href="#" class="btn-main">Sign up</a>
+                <a href="#" class="btn-hot">Get a quote</a>
+            </div>
+        </nav>
 
 
 
