--- a/Web/HTML/Test.html
+++ b/Web/HTML/Test.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Grid</title>
-    <link rel="stylesheet" href="../CSS/test.css.map">
+    <link rel="stylesheet" href="../CSS/test.css">
     <!-- <script src="../JS/Script.js"></script> -->
 </head>
 
 <body>
-    <header>
-        
-    </header>
+   
     
 
     <!-- <img src="https://images.unsplash.com/photo-1597666976641-27d60b160499?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
