--- a/Web/HTML/Test.html
+++ b/Web/HTML/Test.html
@@ -24,10 +24,11 @@
 
         <nav>
             <ul class="navigation">
-                <li><a href="#"></a>About us</li>
-                <li><a href="#"></a>Pricing</li>
-                <li><a href="#"></a>Contact</li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
+
             <div class="button">
                 <a href="#" class="btn-main">Sign up</a>
                 <a href="#" class="btn-hot">Get a quote</a>
