--- a/Web/HTML/Flex.html
+++ b/Web/HTML/Flex.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="../CSS/FLex.css">
 </head>
 <body>
-    <section class="container">
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolore veritatis ratione asperiores, et perspiciatis esse unde dolorem repellendus illo.</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolore veritatis ratione asperiores, et perspiciatis esse unde dolorem repellendus illo.</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolore veritatis ratione asperiores, et perspiciatis esse unde dolorem repellendus illo.</div>
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolore veritatis ratione asperiores, et perspiciatis esse unde dolorem repellendus illo.</div>
-    </section>
+    <div class="container">
+        <div class="item">1</div>
+        <div class="item i2">2</div>
+        <div class="item">3</div>
+        <div class="item i4">4</div>
+        <div class="item">5</div>
+    </div>
 </body>
 </html>
