--- a/Web/HTML/Test.html
+++ b/Web/HTML/Test.html
@@ -6,35 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Grid</title>
     <link rel="stylesheet" href="../CSS/test.css">
-    <!-- <script src="../JS/Script.js"></script> -->
+    <script src="../JS/Script.js"></script>
 </head>
 
 <body>
    
-    
+    <nav>
+        <ul class="navigation">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
 
-    <!-- <img src="https://images.unsplash.com/photo-1597666976641-27d60b160499?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1597666953571-8b85a0159483?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1596633298131-decb4c537336?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1597056780590-a022f5d7aa7d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1596942273255-16aa79a98a28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1596942325802-1fccd6d194f7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1597035348713-8d2c5b892073?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19">
-    <img src="https://images.unsplash.com/photo-1596611091918-242cf6b794c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="Covid 19"> -->
+        <div class="button">
+            <a href="#" class="btn-main">Sign up</a>
+            <a href="#" class="btn-hot">Get a quote</a>
+        </div>
+    </nav>
 
-        <nav>
-            <ul class="navigation">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+    <div class="container">
+     <img src="https://images.unsplash.com/photo-1521651201144-634f700b36ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
+     <img src="https://images.unsplash.com/photo-1500479694472-551d1fb6258d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
+     <img src="https://images.unsplash.com/photo-1460999158988-6f0380f81f4d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
+     <img src="https://images.unsplash.com/reserve/wrev1ljvQ6KlfyljCQG0_lion.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
+     <img src="https://images.unsplash.com/photo-1500349812227-3264f5f54181?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
+     <img src="https://images.unsplash.com/photo-1504618223053-559bdef9dd5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
+     <img src="https://images.unsplash.com/photo-1504006833117-8886a355efbf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
+     <img src="https://images.unsplash.com/photo-1463852247062-1bbca38f7805?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60" alt="animals" class="container__img">
 
-            <div class="button">
-                <a href="#" class="btn-main">Sign up</a>
-                <a href="#" class="btn-hot">Get a quote</a>
-            </div>
-        </nav>
-
+</div>
 
 
     
