--- a/Web/HTML/Exercise.html
+++ b/Web/HTML/Exercise.html
@@ -3,9 +3,32 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Js Exercise</title>
+		<title>Exercise</title>
+		<link rel="stylesheet" href="../CSS/Exercise.css" />
 	</head>
 	<body>
-		<script src="../JS/app.js"></script>
+		<div>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+				voluptates nam iste id deleniti animi autem suscipit, distinctio ab
+				praesentium.
+			</p>
+			<!-- <h2>lorem</h2> -->
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, corporis
+				tenetur. Vitae accusantium voluptates deserunt! Provident quam impedit
+				quis ullam?
+			</p>
+			<p class="one">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+				voluptates nam iste id deleniti animi autem suscipit, distinctio ab
+				praesentium.
+			</p>
+			<p class="two">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+				voluptates nam iste id deleniti animi autem suscipit, distinctio ab
+				praesentium.
+			</p>
+		</div>
 	</body>
 </html>
