--- a/Web/HTML/Test.html
+++ b/Web/HTML/Test.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Photo Grid</title>
+		<link rel="stylesheet" href="../CSS/test.css" />
+		<script src="../JS/Script.js"></script>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Grid</title>
-    <link rel="stylesheet" href="../CSS/test.css">
-    <script src="../JS/Script.js"></script>
-</head>
+	<body>
+		<nav>
+			<ul class="navigation">
+				<li><a href="#">About us</a></li>
+				<li><a href="#">Pricing</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
 
-<body>
+			<div class="button">
+				<a href="#" class="btn-main">Sign up</a>
+				<a href="#" class="btn-hot">Get a quote</a>
+			</div>
+		</nav>
 
-    <nav>
-        <ul class="navigation">
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-
-        <div class="button">
-            <a href="#" class="btn-main">Sign up</a>
-            <a href="#" class="btn-hot">Get a quote</a>
-        </div>
-    </nav>
-
-    <!-- <div class="container">
+		<!-- <div class="container">
         <img src="https://images.unsplash.com/photo-1521651201144-634f700b36ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60"
             alt="animals" class="container__img">
         <img src="https://images.unsplash.com/photo-1500479694472-551d1fb6258d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60"
@@ -44,8 +42,10 @@
 
     </div> -->
 
-
-
-</body>
-
+		<h1>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quae
+			expedita itaque earum dolores eos necessitatibus esse alias hic vel!
+		</h1>
+		<h1>helo</h1>
+	</body>
 </html>
